refactoring suite a compte rendu cyril

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
   <head>
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./asset/css/style.css" />
     <meta name="keywords" content="HTML, CSS" />
     <meta
       name="description"
@@ -19,32 +19,34 @@
 
     <title>Reservia</title>
   </head>
-  <body id="bloc_page">
+  <body id="bloc-page">
     <!--page header-->
     <header>
       <div id="logo">
-        <img src="res/images/logo/Reservia.svg" />
+        <img src="./asset/images/logo/Reservia.svg" />
       </div>
       <!--nav-->
-      <nav id="primary_nav">
+      <nav id="primary-nav">
         <ul>
           <li>
-            <a class="selected" href="#bloc_accommodations">Hébergements</a>
+            <a class="selected" href="#bloc-accommodations">Hébergements</a>
           </li>
-          <li><a href="#bloc_activite">Activités</a></li>
+          <li>
+            <a href="#bloc-activite">Activités</a>
+          </li>
         </ul>
       </nav>
-      <nav id="signin_nav">
+      <nav id="signin-nav">
         <ul>
-          <li><a id="signin">S'inscrire</a></li>
+          <li><a id="sign-in">S'inscrire</a></li>
         </ul>
       </nav>
     </header>
 
     <!--page body-->
-    <div id="bloc_body">
+    <div id="bloc-body">
       <!--research-->
-      <section id="bloc_research">
+      <section id="bloc-research">
         <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
         <h2>En plein centre ou en plaine nature</h2>
         <form>
@@ -56,16 +58,16 @@
               id="location"
               placeholder="Marseille, France"
             />
-            <button id="desktop_button">
+            <button id="desktop-button">
               <div>Rechercher</div>
             </button>
-            <button id="mobile_button">              
+            <button id="mobile-button">
               <i class="fas fa-search"></i>
             </button>
           </div>
-          <div id="bloc_filters">
+          <div id="bloc-filters">
             <label>Filtres</label>
-            <div id="list_filters">
+            <div id="list-filters">
               <div class="filter">
                 <i class="fas fa-money-bill-wave"></i>
                 <span>Economique</span>
@@ -85,29 +87,29 @@
             </div>
           </div>
         </form>
-        <div id="search_information">
+        <div id="search-information">
           <i class="fas fa-info"></i>
           <span>Plus de 500 logements sont disponibles dans cette ville</span>
         </div>
       </section>
 
-      <!--accommodation - populaire-->
-      <section id="bloc_accommodations_populaire">
+      <!--accommodation - popular-->
+      <section id="bloc-accommodations-popular">
         <!--accommodation-->
-        <section id="bloc_accommodations">
-          <div class="title_section">
+        <section id="bloc-accommodations">
+          <div class="section-title">
             <h2>Hébergements à Marseille</h2>
           </div>
-          <div id="list_accommodation">
+          <div id="list-accommodation">
             <div class="bloc accommodation">
               <img
-                class="img_accommodation"
-                src="res/images/accommodations/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
+                class="img-accommodation"
+                src="./asset/images/accommodations/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
               />
               <div class="description">
                 <h3>Auberge la Cannebière</h3>
                 <span>Nuit à partir de 25€</span>
-                <div class="star_score">
+                <div class="star-score">
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star"></i>
@@ -119,13 +121,13 @@
 
             <div class="bloc accommodation">
               <img
-                class="img_accommodation"
-                src="res/images/accommodations/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg"
+                class="img-accommodation"
+                src="./asset/images/accommodations/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg"
               />
               <div class="description">
                 <h3>Hôtel du port</h3>
                 <span>Nuit à partir de 52€</span>
-                <div class="star_score">
+                <div class="star-score">
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star"></i>
@@ -137,13 +139,13 @@
 
             <div class="bloc accommodation">
               <img
-                class="img_accommodation"
-                src="res/images/accommodations/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg"
+                class="img-accommodation"
+                src="./asset/images/accommodations/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg"
               />
               <div class="description">
                 <h3>Hôtel Les mouettes</h3>
                 <span>Nuit à partir de 76€</span>
-                <div class="star_score">
+                <div class="star-score">
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star"></i>
@@ -155,13 +157,13 @@
 
             <div class="bloc accommodation">
               <img
-                class="img_accommodation"
-                src="res/images/accommodations/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg"
+                class="img-accommodation"
+                src="./asset/images/accommodations/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg"
               />
               <div class="description">
                 <h3>Hôtel de la mer</h3>
                 <span>Nuit à partir de 46€</span>
-                <div class="star_score">
+                <div class="star-score">
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star"></i>
@@ -173,13 +175,13 @@
 
             <div class="bloc accommodation">
               <img
-                class="img_accommodation"
-                src="res/images/accommodations/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg"
+                class="img-accommodation"
+                src="./asset/images/accommodations/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg"
               />
               <div class="description">
                 <h3>Auberge Le Panier</h3>
                 <span>Nuit à partir de 23€</span>
-                <div class="star_score">
+                <div class="star-score">
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star"></i>
@@ -191,13 +193,13 @@
 
             <div class="bloc accommodation">
               <img
-                class="img_accommodation"
-                src="res/images/accommodations/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg"
+                class="img-accommodation"
+                src="./asset/images/accommodations/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg"
               />
               <div class="description">
                 <h3>Hôtel chez Amina</h3>
                 <span>Nuit à partir de 96€</span>
-                <div class="star_score">
+                <div class="star-score">
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star"></i>
@@ -208,25 +210,25 @@
             </div>
           </div>
 
-          <span id="show_more">Afficher plus</span>
+          <span id="show-more">Afficher plus</span>
         </section>
 
-        <!--populaire-->
-        <section id="bloc_populaire">
-          <div class="title_section">
+        <!--popular-->
+        <section id="bloc-popular">
+          <div class="section-title">
             <h2>Les plus populaires</h2>
             <i class="fas fa-chart-line"></i>
           </div>
-          <div class="list_populaire">
-            <div class="bloc populaire">
+          <div class="list-popular">
+            <div class="bloc popular">
               <img
-                class="img_populaire"
-                src="res/images/accommodations/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
+                class="img-popular"
+                src="./asset/images/accommodations/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
               />
               <div class="description">
                 <h3>Hôtel Le soleil du matin</h3>
                 <span>Nuit à partir de 128€</span>
-                <div class="star_score">
+                <div class="star-score">
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star"></i>
@@ -236,15 +238,15 @@
               </div>
             </div>
 
-            <div class="bloc populaire">
+            <div class="bloc popular">
               <img
-                class="img_populaire"
-                src="res/images/accommodations/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg"
+                class="img-popular"
+                src="./asset/images/accommodations/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg"
               />
               <div class="description">
                 <h3>Au c&#339;ur de l'eau Chambres d'hôtes</h3>
                 <span>Nuit à partir de 71€</span>
-                <div class="star_score">
+                <div class="star-score">
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star"></i>
@@ -254,15 +256,15 @@
               </div>
             </div>
 
-            <div class="bloc populaire">
+            <div class="bloc popular">
               <img
-                class="img_populaire"
-                src="res/images/accommodations/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg"
+                class="img-popular"
+                src="./asset/images/accommodations/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg"
               />
               <div class="description">
                 <h3>Hôtel Tout bleu et Blanc</h3>
                 <span>Nuit à partir de 68€</span>
-                <div class="star_score">
+                <div class="star-score">
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star"></i>
@@ -276,62 +278,62 @@
       </section>
 
       <!--activités-->
-      <section id="bloc_activite">
-        <div class="title_section">
+      <section id="bloc-activity">
+        <div class="section-title">
           <h2>Activités à Marseille</h2>
         </div>
-        <div id="list_activite">
+        <div id="list-activity">
           <div class="column">
-            <div class="bloc activite fill">
+            <div class="bloc activity fill">
               <img
-                class="img_activite"
-                src="res/images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"
+                class="img-activity"
+                src="./asset/images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"
               />
               <h3>Vieux Port</h3>
             </div>
           </div>
 
           <div class="column">
-            <div class="bloc activite tall">
+            <div class="bloc activity tall">
               <img
-                class="img_activite"
-                src="res/images/activites/3_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg"
+                class="img-activity"
+                src="./asset/images/activites/3_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg"
               />
               <h3>Fort de Pomègues</h3>
             </div>
 
-            <div class="bloc activite small">
+            <div class="bloc activity small">
               <img
-                class="img_activite"
-                src="res/images/activites/3_medium/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg"
+                class="img-activity"
+                src="./asset/images/activites/3_medium/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg"
               />
               <h3>Îles du Frioul</h3>
             </div>
           </div>
 
           <div class="column">
-            <div class="bloc activite fill">
+            <div class="bloc activity fill">
               <img
-                class="img_activite"
-                src="res/images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg"
+                class="img-activity"
+                src="./asset/images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg"
               />
               <h3>Parc National des Calanques</h3>
             </div>
           </div>
 
           <div class="column">
-            <div class="bloc activite medium">
+            <div class="bloc activity medium">
               <img
-                class="img_activite"
-                src="res/images/activites/3_medium/florian-wehde-xW9e8gdotxI-unsplash.jpg"
+                class="img-activity"
+                src="./asset/images/activites/3_medium/florian-wehde-xW9e8gdotxI-unsplash.jpg"
               />
               <h3>Notre-Dame-de-la-Garde</h3>
             </div>
 
-            <div class="bloc activite medium">
+            <div class="bloc activity medium">
               <img
-                class="img_activite"
-                src="res/images/activites/3_medium/lena-paulin-wH2-EJoDcV0-unsplash.jpg"
+                class="img-activity"
+                src="./asset/images/activites/3_medium/lena-paulin-wH2-EJoDcV0-unsplash.jpg"
               />
               <h3>Parc Longchamp</h3>
             </div>
@@ -342,7 +344,7 @@
 
     <!--page footer-->
     <footer>
-      <section class="footer_content">
+      <section class="footer-content">
         <div>
           <h4>A propos</h4>
           <a>Fonctionnement du site</a>
