modif de la class sign in

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           </li>
         </ul>
       </nav>
-      <nav id="signin-nav">
+      <nav id="sign-in-nav">
         <ul>
           <li><a id="sign-in">S'inscrire</a></li>
         </ul>
