Ajout d'alt sur les images

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!--page header-->
     <header>
       <div id="logo">
-        <img src="./asset/images/logo/Reservia.svg" />
+        <img src="./asset/images/logo/Reservia.svg" alt="logo" />
       </div>
       <!--nav-->
       <nav id="primary-nav">
@@ -38,7 +38,7 @@
       </nav>
       <nav id="sign-in-nav">
         <ul>
-          <li><a id="sign-in">S'inscrire</a></li>
+          <li><a class="sign-in">S'inscrire</a></li>
         </ul>
       </nav>
     </header>
@@ -58,10 +58,10 @@
               id="location"
               placeholder="Marseille, France"
             />
-            <button id="desktop-button">
+            <button class="desktop-button">
               <div>Rechercher</div>
             </button>
-            <button id="mobile-button">
+            <button class="mobile-button">
               <i class="fas fa-search"></i>
             </button>
           </div>
@@ -105,6 +105,7 @@
               <img
                 class="img-accommodation"
                 src="./asset/images/accommodations/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
+                alt="Chambre avec lits superposés avec vue sur la rue."
               />
               <div class="description">
                 <h3>Auberge la Cannebière</h3>
@@ -123,6 +124,7 @@
               <img
                 class="img-accommodation"
                 src="./asset/images/accommodations/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg"
+                alt="Chambre lumineuse avec deux lits d'une place."
               />
               <div class="description">
                 <h3>Hôtel du port</h3>
@@ -141,6 +143,7 @@
               <img
                 class="img-accommodation"
                 src="./asset/images/accommodations/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg"
+                alt="Chambre avec lit double et dressing."
               />
               <div class="description">
                 <h3>Hôtel Les mouettes</h3>
@@ -159,6 +162,7 @@
               <img
                 class="img-accommodation"
                 src="./asset/images/accommodations/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg"
+                alt="Chambre aspect bord de mer avec lit double."
               />
               <div class="description">
                 <h3>Hôtel de la mer</h3>
@@ -177,6 +181,7 @@
               <img
                 class="img-accommodation"
                 src="./asset/images/accommodations/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg"
+                alt="Dortoir avec lits en bois superposés et ambiance chaleureuse."
               />
               <div class="description">
                 <h3>Auberge Le Panier</h3>
@@ -195,6 +200,7 @@
               <img
                 class="img-accommodation"
                 src="./asset/images/accommodations/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg"
+                alt="Chambre standard avec lits simples."
               />
               <div class="description">
                 <h3>Hôtel chez Amina</h3>
@@ -224,6 +230,7 @@
               <img
                 class="img-popular"
                 src="./asset/images/accommodations/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
+                alt="Chambre ambiance tropical avec lit double."
               />
               <div class="description">
                 <h3>Hôtel Le soleil du matin</h3>
@@ -242,6 +249,7 @@
               <img
                 class="img-popular"
                 src="./asset/images/accommodations/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg"
+                alt="Chambre moderne et luxueuse avec lit double."
               />
               <div class="description">
                 <h3>Au c&#339;ur de l'eau Chambres d'hôtes</h3>
@@ -260,6 +268,7 @@
               <img
                 class="img-popular"
                 src="./asset/images/accommodations/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg"
+                alt="Chambre standard avec lit double."
               />
               <div class="description">
                 <h3>Hôtel Tout bleu et Blanc</h3>
@@ -288,6 +297,7 @@
               <img
                 class="img-activity"
                 src="./asset/images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"
+                alt="Le vieux port avec des bateaux."
               />
               <h3>Vieux Port</h3>
             </div>
@@ -298,6 +308,7 @@
               <img
                 class="img-activity"
                 src="./asset/images/activites/3_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg"
+                alt="Fort vue du contrebas."
               />
               <h3>Fort de Pomègues</h3>
             </div>
@@ -306,6 +317,7 @@
               <img
                 class="img-activity"
                 src="./asset/images/activites/3_medium/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg"
+                alt="Iles vue de loin."
               />
               <h3>Îles du Frioul</h3>
             </div>
@@ -316,6 +328,7 @@
               <img
                 class="img-activity"
                 src="./asset/images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg"
+                alt="vue du haut des falaises."
               />
               <h3>Parc National des Calanques</h3>
             </div>
@@ -326,6 +339,7 @@
               <img
                 class="img-activity"
                 src="./asset/images/activites/3_medium/florian-wehde-xW9e8gdotxI-unsplash.jpg"
+                alt="Notre-Dame vue de loin."
               />
               <h3>Notre-Dame-de-la-Garde</h3>
             </div>
@@ -334,6 +348,7 @@
               <img
                 class="img-activity"
                 src="./asset/images/activites/3_medium/lena-paulin-wH2-EJoDcV0-unsplash.jpg"
+                alt="Vue sur la fontaine du parc."
               />
               <h3>Parc Longchamp</h3>
             </div>
