correction pour la w3school

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
               placeholder="Marseille, France"
             />
             <button class="desktop-button">
-              <div>Rechercher</div>
+              <p>Rechercher</p>
             </button>
             <button class="mobile-button">
               <i class="fas fa-search"></i>
