header mobile fini et repositionnement de celui du desktop

--- a/index.html
+++ b/index.html
@@ -28,17 +28,19 @@
       <!--nav-->
       <nav id="primary-nav">
         <ul>
-          <li>
-            <a class="selected" href="#bloc-accommodations">Hébergements</a>
-          </li>
-          <li>
-            <a href="#bloc-activite">Activités</a>
-          </li>
+          <a class="selected" href="#bloc-accommodations">
+            <li>Hébergements</li>
+          </a>
+          <a href="#bloc-activite">
+            <li>Activités</li>
+          </a>
         </ul>
       </nav>
       <nav id="sign-in-nav">
         <ul>
-          <li><a class="sign-in">S'inscrire</a></li>
+          <a class="sign-in">
+            <li>S'inscrire</li>
+          </a>
         </ul>
       </nav>
     </header>
@@ -59,7 +61,7 @@
               placeholder="Marseille, France"
             />
             <button class="desktop-button">
-              <p>Rechercher</p>
+              <span>Rechercher</span>
             </button>
             <button class="mobile-button">
               <i class="fas fa-search"></i>
