mobile version finito

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <title>Reservia</title>
   </head>
-  <body id="bloc-page">
+  <body>
     <!--page header-->
     <header>
       <div id="logo">
