fix du bouton activte

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <a class="selected" href="#bloc-accommodations">
             <li>Hébergements</li>
           </a>
-          <a href="#bloc-activite">
+          <a href="#bloc-activity">
             <li>Activités</li>
           </a>
         </ul>
