fic sur le sign in

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       </nav>
       <nav id="sign-in-nav">
         <ul>
-          <a class="sign-in">
+          <a class="sign-in" href="#"> 
             <li>S'inscrire</li>
           </a>
         </ul>
