--- a/index.html
+++ b/index.html
@@ -28,19 +28,17 @@
       <!--nav-->
       <nav id="primary-nav">
         <ul>
-          <a class="selected" href="#bloc-accommodations">
-            <li>Hébergements</li>
-          </a>
-          <a href="#bloc-activity">
-            <li>Activités</li>
-          </a>
+          <li class="selected">
+            <a href="#bloc-accommodations"> Hébergements </a>
+          </li>
+          <li>
+            <a href="#bloc-activity"> Activités </a>
+          </li>
         </ul>
       </nav>
       <nav id="sign-in-nav">
         <ul>
-          <a class="sign-in" href="#">
-            <li>S'inscrire</li>
-          </a>
+          <li><a class="sign-in" href="#"> S'inscrire </a></li>
         </ul>
       </nav>
     </header>
